force-app/zurich-base/main/default/objects/Entitlement/Entitlement.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>