force-app/zurich-base/main/default/objects/Entitlement/fields/AccountSegment__c.field-meta.xml
<CustomField>
    <fullName>AccountSegment__c</fullName>
    <description>OCS. Campo que coincidirá con el Segmento de la cuenta asociada al caso al que se quiera asignar el Entitlement</description>
    <label>Account Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>