force-app/zurich-base/main/default/objects/Entitlement/fields/AccountSMESegment__c.field-meta.xml
<CustomField>
    <fullName>AccountSMESegment__c</fullName>
    <label>Account SME Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>