force-app/zurich-base/main/default/objects/Entitlement/fields/CallCenter__c.field-meta.xml
<CustomField>
    <fullName>CallCenter__c</fullName>
    <label>Call Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CallCenter</valueSetName>
    </valueSet>
</CustomField>