force-app/zurich-base/main/default/objects/Entitlement/fields/CaseChannel__c.field-meta.xml
<CustomField>
    <fullName>CaseChannel__c</fullName>
    <description>OCS. Campo que indicará si la cuenta asociada al caso es de tipo cliente o partner.</description>
    <label>CaseChannel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Directo</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>