force-app/zurich-base/main/default/objects/Entitlement/fields/CaseTypeN1__c.field-meta.xml
<CustomField>
    <fullName>CaseTypeN1__c</fullName>
    <description>OCS. Campo que coincidirá con el Nivel 1 de tipología del caso al que se quiera asignar el Entitlement</description>
    <label>Case Type N1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>