force-app/zurich-base/main/default/objects/Entitlement/fields/CaseTypeN2__c.field-meta.xml
<CustomField>
    <fullName>CaseTypeN2__c</fullName>
    <description>OCS. Campo que coincidirá con el Nivel 2 de tipología del caso al que se quiera asignar el Entitlement</description>
    <label>Case Type N2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>