force-app/zurich-base/main/default/objects/Entitlement/fields/CaseTypeN3__c.field-meta.xml
<CustomField>
    <fullName>CaseTypeN3__c</fullName>
    <description>OCS. Campo que coincidirá con el Nivel 3 de tipología del caso al que se quiera asignar el Entitlement</description>
    <label>Case Type N3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>