force-app/zurich-base/main/default/objects/Entitlement/fields/ProductGroupCode__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupCode__c</fullName>
    <label>Product Group Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>